--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "shadcn/ui": "^1.0.0",
+    "@shadcn/ui": "^1.0.0",
     "lucide-react": "^0.263.0",
     "recharts": "^2.7.2"
   }
