--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@shadcn/ui": "0.8.0"
-    "lucide-react": "^0.263.0",
-    "recharts": "^2.7.2"
+    "@shadcn/ui": "0.8.0",
+    "lucide-react": "^0.271.0",
+    "tailwindcss": "^3.4.1"
   }
 }
