--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.3",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lucide-react": "^0.271.0",
-    "tailwindcss": "^3.4.1"
+    "@shadcn/ui": "latest",
+    "lucide-react": "^0.263.0",
+    "recharts": "^2.7.2"
   }
 }
